Fix double border on interaction sidebar

--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -272,10 +272,6 @@
       border-left-width: 1px;
     }
 
-    @include wc.media-query(hd) {
-      border-right-width: 1px;
-    }
-
     @include wc.container-query(ph, lg) {
       #content {
         padding-left: 0;
